--- a/starter/app/src/main/res/layout/fragment_representative.xml
+++ b/starter/app/src/main/res/layout/fragment_representative.xml
@@ -4,6 +4,9 @@
     xmlns:motion="http://schemas.android.com/tools">
 
     <!-- TODO: Add data binding node -->
+    <data>
+
+    </data>
 
     <!-- TODO: Add motion scene to hide form on vertical scroll. -->
     <androidx.constraintlayout.motion.widget.MotionLayout
