--- a/starter/app/src/main/res/layout/fragment_election.xml
+++ b/starter/app/src/main/res/layout/fragment_election.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Add node to connect Election ViewModel -->
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.android.politicalpreparedness.presentation.election.ElectionsViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/default_padding"
-        tools:context="com.example.android.politicalpreparedness.MainActivity">
+        tools:context=".presentation.representative.MainActivity">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_half_screen_height"
@@ -27,15 +31,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <View
+            android:id="@+id/upcoming_elections_divider"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/hair_line"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/upcoming_elections_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="insideOverlay"
+            android:scrollbars="vertical"
+            app:electionList="@{viewModel.upcomingElections}"
             app:layout_constraintBottom_toTopOf="@id/guideline_half_screen_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_header"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_divider">
 
         </androidx.recyclerview.widget.RecyclerView>
 
@@ -48,14 +64,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/guideline_half_screen_height" />
 
+
+        <View
+            android:id="@+id/saved_elections_divider"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/hair_line"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/saved_elections_header" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/saved_elections_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="insideOverlay"
+            android:scrollbars="vertical"
+            app:electionList="@{viewModel.savedElections}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/saved_elections_header"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@id/saved_elections_divider" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
