--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="padding_extra_large">32dp</dimen>
     <dimen name="padding_large">24dp</dimen>
     <dimen name="social_media_icon_size">24dp</dimen>
+    <dimen name="hair_line">1dp</dimen>
 </resources>
